# MpxEx-2

app/: build.gradle.kts
app/src/main/cpp/: CMakeLists.txt  fast_seek_decoder.cpp
app/src/main/java/app/marlboroadvance/mpvex/ui/player/: FastSeekDecoder.kt  PlayerOverlay.kt
